# scotch

./: .gitignore  rebuild.sh  scotch.cabal
app/: Main.hs
scotch-db/: .sosrc  README.md  scotch-db.cabal
scotch-db/src/: Lib.hs
scotch-db/src/Scotch/DB/: FieldParserHelpers.hs  Gateways.hs  HList.hs  IsGateway.hs  ParsableHelpers.hs  Queries.hs  QueryHelpers.hs  Tests.hs  Types.hs
scotch-db/src/Scotch/DB/Gateways/: PayGuruGateway.hs  TestGateway.hs
scotch-db/src/Scotch/DB/Types/: Affiliate.hs  GatewayConnection.hs  GatewayNotification.hs  GatewayOperator.hs  GatewayService.hs  HandsetLevel.hs  HttpRequest.hs  Imports.hs  Operator.hs  Pixel.hs  PixelValue.hs  Sale.hs  SmallHttpRequest.hs  Visit.hs
scotch-db/test/: Spec.hs  TestPixelValues.hs  TestVisit.hs
scotch-web-server/: .sosrc  .stylish-haskell.yaml  rebuild.sh  scotch.cabal  stack.yaml
scotch-web-server/sql-scripts/: create-db.sql
scotch-web-server/src/: Types.hs  WebServer.hs
scotch-workers/: .sosrc  README.md  rebuild.sh  scotch-workers.cabal  stack.yaml
scotch-workers/app/: Main.hs
scotch-workers/src/Scotch/Workers/: Lib.hs
sql-scripts/: create-db.sql
src/: PostgreSQLConnectionPool.hs  RunIO.hs  WebServer.hs
