name:                scotch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/scotch#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , WebServer
                     , PostgreSQLConnectionPool
  build-depends:       base >= 4.7 && < 5
                     , postgresql-simple >= 0.5 && < 0.6
                     , resource-pool >= 0.2 && < 0.3
                     , async >= 2.1 && < 2.2
                     , process >= 1.4 && < 1.5
                     , stm >= 2.4 && < 2.5
                     , containers >= 0.5 && < 0.6
                     , split >= 0.2 && < 0.3
                     , postgresql-libpq >= 0.9.3 && < 0.9.8
                     , bytestring >= 0.9
                     , aeson >= 1.0 && < 1.1
                     , text >= 1.2 && < 1.3
                     , parsec >= 3.1 && < 3.2
                     , hspec >= 2 && < 3
                     , transformers >= 0.4 && < 0.6
                     , mtl >= 2.2 && < 2.3
                     , scotty >= 0.11
                     , wai-extra >= 3.0 && < 3.1
                     , lens >= 4 && < 5
                     , time >= 1.2 && < 1.9
  default-language:    Haskell2010
  ghc-options:         -W

executable scotch-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -W
  build-depends:       base
                     , scotch
  default-language:    Haskell2010

test-suite scotch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scotch
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -W
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/scotch
